--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
-*{
+* {
     margin: 0;
     padding: 0;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f3fbff;
+}
+
+.img-box {
+    width: 60vw;
+    margin: auto;
+    line-height: 0;
+    background-image: url('img/background.png');
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrap {
+    position: absolute;
+    left: 0;
+    top: 0;
+    overflow: hidden;
 }
